--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<h1>Ejercicios JavaScript</h1>
+<h1>Calculador de Horas Extras</h1>
 <body>
     
 
